# personalfinance

./: .gitignore  pyproject.toml
personal-finance/: main.py
