[tool.poetry]
name = "personal-finance"
version = "0.1.0"
description = ""
authors = ["KarrotLondon <notreal@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
nordigen = "^1.2.0"
google-api-python-client = "^2.58.0"
google-auth-httplib2 = "^0.1.0"
google-auth-oauthlib = "^0.5.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
